[package]
name = "digilent-waveforms"
version = "0.0.9"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2018"
description = "Bindings for Digilent Waveforms API"
license = "MIT OR Apache-2.0"
links = "dwf"

[dependencies]
time = "0.1.42"
itertools = "0.8.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[features]
link-with-stub = []

[build-dependencies]
bindgen = "0.47.1"
regex = "1.1.0"
